--- a/starter-page.html
+++ b/starter-page.html
@@ -15,6 +15,7 @@
   <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
 rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
 
 <!-- jQuery CDN -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -122,71 +123,49 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.j
 
     </section><!-- /Starter Section Section -->
 
-
     <div class="container mt-5">
-      <h2 class="mb-4">KUCSA Registration Form</h2>
-      <!-- Placeholder for feedback messages -->
-      <div id="alertPlaceholder"></div>
-      <form id="registrationForm">
-      <div class="mb-3">
-      <label for="name" class="form-label">Full Name</label>
-      <input type="text" class="form-control" id="name" name="name" placeholder="Enter your
-      full name" required>
-      </div>
-      <div class="mb-3">
-      <label for="phone" class="form-label">Phone Number</label>
-      <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter your
-      phone number" required>
-      </div>
-      <div class="mb-3">
-      <label for="constituency" class="form-label">Constituency</label>
-      <input type="text" class="form-control" id="constituency" name="constituency"
-      placeholder="Enter your constituency" required>
-      </div>
-      <div class="mb-3">
-      <label for="university" class="form-label">University</label>
-      <input type="text" class="form-control" id="university" name="university"
-      placeholder="Enter your university" required>
-      </div>
-      <div class="mb-3">
-      <label for="mpesa_code" class="form-label">Mpesa Registration Code</label>
-      <input type="text" class="form-control" id="mpesa_code" name="mpesa_code"
-      placeholder="Enter your Mpesa registration code" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Register</button>
+      <h2 class="mb-4 text-center">KUCSA Membership Registration</h2>
+      <div id="result"></div>
+      <form id="regForm">
+        <div class="mb-3">
+          <label for="name" class="form-label">Name:</label>
+          <input type="text" class="form-control" name="name" id="name" placeholder="Your name" required>
+        </div>
+        <div class="mb-3">
+          <label for="phone" class="form-label">Phone Number:</label>
+          <input type="text" class="form-control" name="phone" id="phone" placeholder="Your phone number" required>
+        </div>
+        <div class="mb-3">
+          <label for="university" class="form-label">University:</label>
+          <input type="text" class="form-control" name="university" id="university" placeholder="Your university" required>
+        </div>
+        <div class="mb-3">
+          <label for="constituency" class="form-label">Constituency:</label>
+          <input type="text" class="form-control" name="constituency" id="constituency" placeholder="Your constituency" required>
+        </div>
+        <div class="mb-3">
+          <label for="membership" class="form-label">Membership Type:</label>
+          <select class="form-select" name="membership" id="membership" required>
+            <option value="">Select Membership Type</option>
+            <option value="ordinary">Ordinary</option>
+            <option value="diaspora">Diaspora</option>
+            <option value="alumni">Alumni</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="mpesa" class="form-label">Mpesa Code:</label>
+          <input type="text" class="form-control" name="mpesa" id="mpesa" placeholder="Your Mpesa code" required>
+        </div>
+        <div class="mb-3">
+          <label for="expectations" class="form-label">Expectations from KUCSA:</label>
+          <textarea class="form-control" name="expectations" id="expectations" rows="3" placeholder="Your expectations"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
       </form>
-      </div>
-      <script>
-      $(document).ready(function(){
-      // Intercept form submission
-      $('#registrationForm').on('submit', function(e){
-      e.preventDefault(); // Prevent default form submission
-      // Serialize form data
-      var formData = $(this).serialize();
-      // AJAX POST to PHP script
-      $.ajax({
-      url: 'process_registration.php',
-      type: 'POST',
-      data: formData,
-      dataType: 'json',
-      success: function(response) {
-      if(response.success){
-      $('#alertPlaceholder').html('<div class="alert alert-success" role="alert">' +
-      response.message + '</div>');
-      $('#registrationForm')[0].reset(); // Reset the form
-      } else {
-      $('#alertPlaceholder').html('<div class="alert alert-danger" role="alert">' +
-      response.message + '</div>');
-      }
-      },
-      error: function(xhr, status, error) {
-      $('#alertPlaceholder').html('<div class="alert alert-danger" role="alert">An error occurred: ' + error + '</div>');
-      }
-      });
-      });
-      });
-      </script>
+    </div>
 
+
+    
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
@@ -263,6 +242,10 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.j
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+    <!-- jQuery (for simplicity) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Custom JavaScript file -->
+    <script src="script.js"></script>
 
 </body>
 
