--- a/about.html
+++ b/about.html
@@ -138,6 +138,41 @@
            
          </p>
 
+         <div class="container mt-5">
+          <div class="row">
+            <!-- Image 1 -->
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/IMG-20241229-WA0373.jpg" class="img-fluid rounded" alt="Image 1">
+            </div>
+            <!-- Image 2 -->
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/07 Nov.png" class="img-fluid rounded" alt="Image 2">
+            </div>
+            <!-- Image 3 -->
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/IMG-20250113-WA0551.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+                        <!-- Image 3 -->
+                        <div class="col-md-4 col-sm-6 mb-4">
+                          <img src="images/IMG-20250113-WA0551.jpg" class="img-fluid rounded" alt="Image 3">
+                        </div>
+                                    <!-- Image 3 -->
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/IMG-20250113-WA0212.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+                        <!-- Image 3 -->
+                        <div class="col-md-4 col-sm-6 mb-4">
+                          <img src="images/IMG-20250113-WA0226.jpg" class="img-fluid rounded" alt="Image 3">
+                        </div>
+                                    <!-- Image 3 -->
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/IMG-20250113-WA0212.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <!-- Additional images can be added here -->
+          </div>
+        </div>
+        
+
           </div>
 
         </div>
