--- a/trainers.html
+++ b/trainers.html
@@ -141,7 +141,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
-              <img src="images/Duke.jpg" class="img-fluid" alt="">
+              <img src="images/dukes.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
