--- a/trainers.html
+++ b/trainers.html
@@ -124,7 +124,134 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
     </div><!-- End Page Title -->
 
 
+    <div class="container mt-5">
+      <h2 class="mb-4 text-center">KUCSA Election System//Open only during elections</h2>
+      <ul class="nav nav-tabs" id="electionTabs" role="tablist">
+      <li class="nav-item">
+      <a class="nav-link active" id="register-tab" data-bs-toggle="tab" href="#register"
+      role="tab" aria-controls="register" aria-selected="true">Candidate Registration</a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" id="voting-tab" data-bs-toggle="tab" href="#voting" role="tab"
+      aria-controls="voting" aria-selected="false">Voting</a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" id="results-tab" data-bs-toggle="tab" href="#results" role="tab"
+      aria-controls="results" aria-selected="false">Results</a>
+      </li>
+      </ul>
+      <div class="tab-content">
+      <!-- Candidate Registration Tab -->
+      <div class="tab-pane fade show active" id="register" role="tabpanel"
+      aria-labelledby="register-tab">
+      <h4 class="mt-3">Candidate Registration</h4>
+      <div id="candidateAlert"></div>
+      <form id="candidateForm" enctype="multipart/form-data">
+      <div class="mb-3">
+      <label for="c_name" class="form-label">Candidate Name</label>
+      <input type="text" class="form-control" id="c_name" name="name" placeholder="Enter
+      candidate name" required>
+      </div>
+      <div class="mb-3">
+      <label for="c_position" class="form-label">Position (e.g., President, Vice President,
+      Secretary)</label>
+      <input type="text" class="form-control" id="c_position" name="position"
+      placeholder="Enter position" required>
+      </div>
+      <div class="mb-3">
+      <label for="c_manifesto" class="form-label">Manifesto</label>
+      <textarea class="form-control" id="c_manifesto" name="manifesto" rows="3"
+      placeholder="Enter manifesto"></textarea>
+      </div>
+      <div class="mb-3">
+      <label for="c_image" class="form-label">Candidate Image (optional)</label>
+      <input type="file" class="form-control" id="c_image" name="image" accept="image/*">
+      </div>
+      <button type="submit" class="btn btn-primary">Register Candidate</button>
+      </form>
+      </div>
+      <!-- Voting Tab -->
+      <div class="tab-pane fade" id="voting" role="tabpanel" aria-labelledby="voting-tab">
+      <h4 class="mt-3">Voting</h4>
+      <div id="voteAlert"></div>
+      <form id="voteForm">
+      <div class="mb-3">
+      <label for="voter_email" class="form-label">Your Email (for verification)</label>
+      <input type="email" class="form-control" id="voter_email" name="voter_email"
+      placeholder="Enter your email" required>
+      </div>
+      <div id="candidateList">
+      <!-- Grouped candidate cards will be loaded here via AJAX -->
+      </div>
+      <button type="submit" class="btn btn-success mt-3">Submit Vote</button>
+      </form>
+      </div>
+      <!-- Results Tab -->
+      <div class="tab-pane fade" id="results" role="tabpanel" aria-labelledby="results-tab">
+      <h4 class="mt-3">Election Results</h4>
+      <div id="resultsContent">
+      <!-- Grouped results will be loaded here via AJAX -->
+      </div>
+      </div>
+      </div>
+      </div>
 
+
+
+  </main>
+
+  <footer id="footer" class="footer position-relative light-background">
+
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="index.html" class="logo d-flex align-items-center">
+            <span class="sitename">KUCSA</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p>KITUI</p>
+            <p>KITUI</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254768537010</span></p>
+            <p><strong>Email:</strong> <span>kucsa7767@gmail.com</span></p>
+          </div>
+          <div class="social-links d-flex mt-4">
+            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Privacy policy</a></li>
+          </ul>
+        </div>
+
+
+
+        <div class="col-lg-4 col-md-12 footer-newsletter">
+          <h4>Our Newsletter</h4>
+          <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+          <form action="forms/newsletter.php" method="post" class="php-email-form">
+            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+          </form>
+        </div>
+
+      </div>
+    </div>
+     
+
+      </div>
+    </div>
        
 
     <!-- Trainers Section -->
@@ -284,77 +411,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
 
    
-    <div class="container mt-5">
-      <h2 class="mb-4 text-center">KUCSA Election System//Open only during elections</h2>
-      <ul class="nav nav-tabs" id="electionTabs" role="tablist">
-      <li class="nav-item">
-      <a class="nav-link active" id="register-tab" data-bs-toggle="tab" href="#register"
-      role="tab" aria-controls="register" aria-selected="true">Candidate Registration</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" id="voting-tab" data-bs-toggle="tab" href="#voting" role="tab"
-      aria-controls="voting" aria-selected="false">Voting</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" id="results-tab" data-bs-toggle="tab" href="#results" role="tab"
-      aria-controls="results" aria-selected="false">Results</a>
-      </li>
-      </ul>
-      <div class="tab-content">
-      <!-- Candidate Registration Tab -->
-      <div class="tab-pane fade show active" id="register" role="tabpanel"
-      aria-labelledby="register-tab">
-      <h4 class="mt-3">Candidate Registration</h4>
-      <div id="candidateAlert"></div>
-      <form id="candidateForm" enctype="multipart/form-data">
-      <div class="mb-3">
-      <label for="c_name" class="form-label">Candidate Name</label>
-      <input type="text" class="form-control" id="c_name" name="name" placeholder="Enter
-      candidate name" required>
-      </div>
-      <div class="mb-3">
-      <label for="c_position" class="form-label">Position (e.g., President, Vice President,
-      Secretary)</label>
-      <input type="text" class="form-control" id="c_position" name="position"
-      placeholder="Enter position" required>
-      </div>
-      <div class="mb-3">
-      <label for="c_manifesto" class="form-label">Manifesto</label>
-      <textarea class="form-control" id="c_manifesto" name="manifesto" rows="3"
-      placeholder="Enter manifesto"></textarea>
-      </div>
-      <div class="mb-3">
-      <label for="c_image" class="form-label">Candidate Image (optional)</label>
-      <input type="file" class="form-control" id="c_image" name="image" accept="image/*">
-      </div>
-      <button type="submit" class="btn btn-primary">Register Candidate</button>
-      </form>
-      </div>
-      <!-- Voting Tab -->
-      <div class="tab-pane fade" id="voting" role="tabpanel" aria-labelledby="voting-tab">
-      <h4 class="mt-3">Voting</h4>
-      <div id="voteAlert"></div>
-      <form id="voteForm">
-      <div class="mb-3">
-      <label for="voter_email" class="form-label">Your Email (for verification)</label>
-      <input type="email" class="form-control" id="voter_email" name="voter_email"
-      placeholder="Enter your email" required>
-      </div>
-      <div id="candidateList">
-      <!-- Grouped candidate cards will be loaded here via AJAX -->
-      </div>
-      <button type="submit" class="btn btn-success mt-3">Submit Vote</button>
-      </form>
-      </div>
-      <!-- Results Tab -->
-      <div class="tab-pane fade" id="results" role="tabpanel" aria-labelledby="results-tab">
-      <h4 class="mt-3">Election Results</h4>
-      <div id="resultsContent">
-      <!-- Grouped results will be loaded here via AJAX -->
-      </div>
-      </div>
-      </div>
-      </div>
+   
       <!-- jQuery and Bootstrap scripts -->
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script
