--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!-- Bootstrap CDN -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -34,9 +37,56 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<style>
+  /* Bootstrap Advertisement Banner */
+.container-fluid {
+    z-index: 9999;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+marquee {
+    font-size: 14px;
+}
+
+marquee i {
+    margin-right: 5px;
+    color: #FFD700; /* Gold color for icons */
+}
+
+.text-warning {
+    font-weight: bold;
+}
+
+.text-warning:hover {
+    text-decoration: underline;
+}
+
+</style>
+
 </head>
 
 <body class="index-page">
+
+<!-- Bootstrap Advertisement Banner for 4Force Developers -->
+<div class="container-fluid bg-primary text-white py-2 fixed-top">
+  <div class="row">
+      <div class="col text-center">
+          <marquee behavior="scroll" direction="left">
+              <strong>🚀 4Force Developers – Your Trusted Web Solutions Partner! | </strong>
+              <span><i class="fas fa-laptop-code"></i> Custom Web Design</span> | 
+              <span><i class="fas fa-code"></i> Web Development</span> | 
+              <span><i class="fas fa-paint-brush"></i> UI/UX Design</span> | 
+              <span><i class="fas fa-shopping-cart"></i> E-Commerce Solutions</span> | 
+              <span><i class="fas fa-search"></i> SEO & Digital Marketing</span> | 
+              <span><i class="fas fa-tools"></i> Website Maintenance</span> | 
+              <span><i class="fas fa-headset"></i> 24/7 Support</span> | 
+              <strong>📞 Call/WhatsApp: <a href="tel:+254768537010" class="text-warning">+254768537010</a> | Visit: <a href="https://4forcedeveloperss.netlify.app/" target="_blank" class="text-warning">4forcedevelopers.com</a></strong>
+          </marquee>
+      </div>
+  </div>
+</div>
+
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
@@ -301,7 +351,7 @@ personal growth.
                 </a></h3>
                 <p class="description">Prospective members can register online by filling out our membership form and paying the
                   required fee. We welcome new ideas and encourage every student to become a part of our
-                  transformative journey   <a class="btn-getstarted" href="starter-page.html">Join us</a></p>
+                  transformative journey   <a class="btn-getstarted" href="kucsaforms.netlify.app">Join us</a></p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
 
