--- a/starter-page.html
+++ b/starter-page.html
@@ -96,7 +96,7 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.j
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Join Us</li>
+            <li class="current"><a href="kucsaforms.netlify.app">Join Us</a></li>
           </ol>
         </div>
       </nav>
@@ -160,7 +160,7 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.j
           <label for="expectations" class="form-label">Expectations from KUCSA:</label>
           <textarea class="form-control" name="expectations" id="expectations" rows="3" placeholder="Your expectations"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary"> <a href="kucsaforms.netlify.app">Register/a></button>
       </form>
     </div>
 
