--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 <style>
+
+  body{
+    margin-top: 100px;
+  }
   /* Bootstrap Advertisement Banner */
 .container-fluid {
     z-index: 9999;
@@ -354,7 +358,7 @@ personal growth.
                 </a></h3>
                 <p class="description">Prospective members can register online by filling out our membership form and paying the
                   required fee. We welcome new ideas and encourage every student to become a part of our
-                  transformative journey   <a class="btn-getstarted" href="kucsaforms.netlify.app">Join us</a></p>
+                  transformative journey   <a class="btn-getstarted" href="starter-page.html">Join us</a></p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
 
