--- a/about.html
+++ b/about.html
@@ -203,47 +203,45 @@
                                                 </div>
                                                                                     <!-- Image 3 -->
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/1.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/2.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/3.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/4.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/5.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/6.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/7.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/8.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/9.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/10.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/11.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/12.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/13.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k11.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
+           
                        
             <!-- Additional images can be added here -->
           </div>
