--- a/about.html
+++ b/about.html
@@ -177,31 +177,6 @@
                                                   <img src="images/k4.jpg" class="img-fluid rounded" alt="Image 3">
                                                 </div>
 
-                                                                                    <!-- Image 3 -->
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k5.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-                                                <!-- Image 3 -->
-                                                <div class="col-md-4 col-sm-6 mb-4">
-                                                  <img src="images/k6.jpg" class="img-fluid rounded" alt="Image 3">
-                                                </div>
-                                                                                    <!-- Image 3 -->
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k7.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-                                          <!-- Image 3 -->
-                                          <div class="col-md-4 col-sm-6 mb-4">
-                                            <img src="images/k8.jpg" class="img-fluid rounded" alt="Image 3">
-                                          </div>
-                                                                              <!-- Image 3 -->
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/k9.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-                                                <!-- Image 3 -->
-                                                <div class="col-md-4 col-sm-6 mb-4">
-                                                  <img src="images/k112.jpg" class="img-fluid rounded" alt="Image 3">
-                                                </div>
-                                                                                    <!-- Image 3 -->
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/add/1.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
@@ -240,6 +215,32 @@
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/add/13.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/14.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/15.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/13.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/16.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/17.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/18.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/19.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/20.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
            
                        
