--- a/about.html
+++ b/about.html
@@ -242,6 +242,21 @@
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/add/20.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/21.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/22.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/23.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/24.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/25.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
            
                        
             <!-- Additional images can be added here -->
