--- a/about.html
+++ b/about.html
@@ -172,23 +172,6 @@
               <img src="images/k3.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
 
-                                                <!-- Image 3 -->
-                                                <div class="col-md-4 col-sm-6 mb-4">
-                                                  <img src="images/k4.jpg" class="img-fluid rounded" alt="Image 3">
-                                                </div>
-
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/1.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/2.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/3.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/4.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/add/5.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
@@ -208,56 +191,46 @@
               <img src="images/add/10.jpg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/11.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/11.jpeg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/12.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/12.jpeg" class="img-fluid rounded" alt="Image 3">
             </div>
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/13.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/13.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/14.jpeg" class="img-fluid rounded" alt="Image 3">
             </div>
 
             <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/14.jpg" class="img-fluid rounded" alt="Image 3">
+              <img src="images/add/15.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/16.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/17.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/18.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/19.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/21.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/22.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/23.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/24.jpeg" class="img-fluid rounded" alt="Image 3">
             </div>
 
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/15.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/13.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/16.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/17.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/18.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/19.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/20.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/21.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/22.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/23.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/24.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-              <img src="images/add/25.jpg" class="img-fluid rounded" alt="Image 3">
-            </div>
-           
                        
             <!-- Additional images can be added here -->
           </div>
