--- a/about.html
+++ b/about.html
@@ -230,6 +230,24 @@
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/add/24.jpeg" class="img-fluid rounded" alt="Image 3">
             </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/2.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/3.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/26.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/27.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/28.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/29.jpeg" class="img-fluid rounded" alt="Image 3">
+            </div>
 
                        
             <!-- Additional images can be added here -->
