--- a/about.html
+++ b/about.html
@@ -248,6 +248,12 @@
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/add/29.jpeg" class="img-fluid rounded" alt="Image 3">
             </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/1.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/4.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
 
                        
             <!-- Additional images can be added here -->
