--- a/trainers.html
+++ b/trainers.html
@@ -77,7 +77,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
         <ul>
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="trainers.html" class="active">Elections</a></li>
+          <li><a href="trainers.html" class="active">Leadership</a></li>
           <li><a href="events.html">Events</a></li>
 
           <li><a href="contact.html">Contact</a></li>
@@ -95,115 +95,16 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
-      <div class="heading">
-        <div class="container">
-          <div class="row d-flex justify-content-center text-center">
-            <div class="col-lg-8">
-              <h1>Fair and Transparent Leadership Selection
-
-              </h1>
-
-              <h2>Election Process:- Refer to the KUCSA constitution
-
-              </h2>
-              <p class="mb-0">At the heart of KUCSA is a dedicated team of leaders committed to steering our association
-                toward a brighter future.
-                </p>
-            </div>
-          </div>
-        </div>
-      </div>
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Elections</li>
+            <li class="current">Leadership</li>
           </ol>
         </div>
       </nav>
     </div><!-- End Page Title -->
 
-
-    <div class="container mt-5">
-      <h2 class="mb-4 text-center">KUCSA Election System//Open only during elections</h2>
-      <ul class="nav nav-tabs" id="electionTabs" role="tablist">
-      <li class="nav-item">
-      <a class="nav-link active" id="register-tab" data-bs-toggle="tab" href="#register"
-      role="tab" aria-controls="register" aria-selected="true">Candidate Registration</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" id="voting-tab" data-bs-toggle="tab" href="#voting" role="tab"
-      aria-controls="voting" aria-selected="false">Voting</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" id="results-tab" data-bs-toggle="tab" href="#results" role="tab"
-      aria-controls="results" aria-selected="false">Results</a>
-      </li>
-      </ul>
-      <div class="tab-content">
-      <!-- Candidate Registration Tab -->
-      <div class="tab-pane fade show active" id="register" role="tabpanel"
-      aria-labelledby="register-tab">
-      <h4 class="mt-3">  Candidate Registration</h4>
-      <div id="candidateAlert"></div>
-      <form id="candidateForm" enctype="multipart/form-data">
-      <div class="mb-3">
-      <label for="c_name" class="form-label">Candidate Name</label>
-      <input type="text" class="form-control" id="c_name" name="name" placeholder="Enter
-      candidate name" required>
-      </div>
-      <div class="mb-3">
-      <label for="c_position" class="form-label">Position (e.g., President, Vice President,
-      Secretary)</label>
-      <input type="text" class="form-control" id="c_position" name="position"
-      placeholder="Enter position" required>
-      </div>
-      <div class="mb-3">
-      <label for="c_manifesto" class="form-label">Manifesto</label>
-      <textarea class="form-control" id="c_manifesto" name="manifesto" rows="3"
-      placeholder="Enter manifesto"></textarea>
-      </div>
-      <div class="mb-3">
-      <label for="c_image" class="form-label">Candidate Image (optional)</label>
-      <input type="file" class="form-control" id="c_image" name="image" accept="image/*">
-      </div>
-      <button type="submit" class="btn btn-primary">Register Candidate</button>
-      </form>
-      </div>
-      <!-- Voting Tab -->
-      <div class="tab-pane fade" id="voting" role="tabpanel" aria-labelledby="voting-tab">
-      <h4 class="mt-3">Voting</h4>
-      <div id="voteAlert"></div>
-      <form id="voteForm">
-      <div class="mb-3">
-      <label for="voter_email" class="form-label">Your Email (for verification)</label>
-      <input type="email" class="form-control" id="voter_email" name="voter_email"
-      placeholder="Enter your email" required>
-      </div>
-      <div id="candidateList">
-      <!-- Grouped candidate cards will be loaded here via AJAX -->
-      </div>
-      <button type="submit" class="btn btn-success mt-3">Submit Vote</button>
-      </form>
-      </div>
-      <!-- Results Tab -->
-      <div class="tab-pane fade" id="results" role="tabpanel" aria-labelledby="results-tab">
-      <h4 class="mt-3">Election Results</h4>
-      <div id="resultsContent">
-      <!-- Grouped results will be loaded here via AJAX -->
-      </div>
-      </div>
-      </div>
-      </div>
-
-
-
-  </main>
-
-     
-
-      </div>
-    </div>
        
 
     <!-- Trainers Section -->
