--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ marquee i {
         <ul>
           <li><a href="index.html" class="active">Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="trainers.html">Elections</a></li>
+          <li><a href="trainers.html">Leadership</a></li>
           <li><a href="events.html">Events</a></li>
          <li><a href="contact.html">Contact</a></li>
         </ul>
