--- a/trainers.html
+++ b/trainers.html
@@ -121,7 +121,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
-              <img src="images/dukes.jpg" class="img-fluid" alt="">
+              <img src="imagess/President.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -131,7 +131,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
             </div>
             <div class="member-info text-center">
               <h4>Hon. John Mbusyo (Duke)</h4>
-              <span>President & Founder</span>
+              <span>President </span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
@@ -139,7 +139,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
-              <img src="images/oo10.png" class="img-fluid" alt="">
+              <img src="imagess/Dpresi.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -148,15 +148,15 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Beatrice Kimanzi</h4>
-              <span>Vice President</span>
+              <h4>Esther Kasee</h4>
+              <span>Deputy President</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
             <div class="member-img">
-              <img src="images/chris.jpg" class="img-fluid" alt="">
+              <img src="imagess/sg.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -165,7 +165,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Chris Muli</h4>
+              <h4>David Musyoka</h4>
               <span>Secretary General</span>
               <p></p>
             </div>
@@ -173,7 +173,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
-              <img src="images/IMG-20250113-WA0212.jpg" class="img-fluid" alt="">
+              <img src="imagess/treas.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -183,14 +183,14 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
             </div>
             <div class="member-info text-center">
               <h4>Faith Nzembi</h4>
-              <span>Representative Kitui Rural</span>
+              <span>Treasurer</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
-              <img src="images/fai.jpg" class="img-fluid" alt="">
+              <img src="imagess/orgsec.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -199,15 +199,15 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Faith Mumo</h4>
-              <span>Rep Mwingi Central</span>
+              <h4>Ezekiel Mutinda</h4>
+              <span>Organising Secretary/Programs Manager</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
-              <img src="images/oo4.png" class="img-fluid" alt="">
+              <img src="imagess/commd.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -216,8 +216,8 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>David</h4>
-              <span>Rep Mwingi West</span>
+              <h4>Raphael Kavisu</h4>
+              <span>Communications Director</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
