--- a/events.html
+++ b/events.html
@@ -52,7 +52,7 @@
         <ul>
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="trainers.html">Elections</a></li>
+          <li><a href="trainers.html">Leadership</a></li>
           <li><a href="events.html" class="active">Events</a></li>
 
           <li><a href="contact.html">Contact</a></li>
