--- a/starter-page.html
+++ b/starter-page.html
@@ -63,7 +63,7 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.j
         <ul>
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="trainers.html">Elections</a></li>
+          <li><a href="trainers.html">Leadership</a></li>
           <li><a href="events.html">Events</a></li>
          <li><a href="contact.html">Contact</a></li>
         </ul>
