--- a/trainers.html
+++ b/trainers.html
@@ -224,7 +224,7 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="500">
             <div class="member-img">
-              <img src="images/regina.jpg" class="img-fluid" alt="">
+              <img src="imagess/kcentral.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -233,15 +233,15 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Regina Ndambuki</h4>
-              <span>Communications Director<br></span>
+              <h4>Kelvin Mutuku</h4>
+              <span>Constituency Rep Kitui Central<br></span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
-              <img src="images/JAMES.jpg" class="img-fluid" alt="">
+              <img src="imagess/kwest.JPG" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -250,11 +250,104 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>James Nzau</h4>
-              <span>Representative Kitui West</span>
+              <h4>William Kitonga</h4>
+              <span>Constituency Rep Kitui West</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
+
+           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+            <div class="member-img">
+              <img src="imagess/ksouth.JPG" class="img-fluid" alt="">
+              <div class="social">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Nelly Nyamai</h4>
+              <span>Constituency Rep Kitui South</span>
+              <p></p>
+            </div>
+          </div><!-- End Team Member -->
+
+
+           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+            <div class="member-img">
+              <img src="imagess/mwest.JPG" class="img-fluid" alt="">
+              <div class="social">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Justus Mutemi</h4>
+              <span>Constituency Rep Justus Mutemi</span>
+              <p></p>
+            </div>
+          </div><!-- End Team Member -->
+
+
+
+           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+            <div class="member-img">
+              <img src="imagess/mnorth.JPG" class="img-fluid" alt="">
+              <div class="social">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Victor Mutemi</h4>
+              <span>Constituency Rep Mwingi North</span>
+              <p></p>
+            </div>
+          </div><!-- End Team Member -->
+
+
+           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+            <div class="member-img">
+              <img src="imagess/mcentral.JPG" class="img-fluid" alt="">
+              <div class="social">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>James Musisya</h4>
+              <span>Constituency Rep Mwingi Central</span>
+              <p></p>
+            </div>
+          </div><!-- End Team Member -->
+
+
+           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+            <div class="member-img">
+              <img src="imagess/krural.JPG" class="img-fluid" alt="">
+              <div class="social">
+                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Mary Mue</h4>
+              <span>Constituency Rep Kitui Rural</span>
+              <p></p>
+            </div>
+          </div><!-- End Team Member -->
+
+        
+
 
         </div>
 
