--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="images/INTENT.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -143,6 +143,89 @@
 
          <div class="container mt-5">
           <div class="row">
+
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga1.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga2.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga5.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga6.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga7.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga8.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga9.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga10.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga11.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga12.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga15.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga17.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga20.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga22.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/ga23.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/grou34.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/Dpresi.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/Group.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/Group4.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/Group2.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/orgsec.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/Dpresi.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/mnorth.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/group6.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/orgsec.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="imagess/mwest.JPG" class="img-fluid rounded" alt="Image 3">
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+              <img src="images/add/4.jpg" class="img-fluid rounded" alt="Image 3">
+            </div>
             <!-- Image 1 -->
             <div class="col-md-4 col-sm-6 mb-4">
               <img src="images/IMG-20241229-WA0373.jpg" class="img-fluid rounded" alt="Image 1">
