--- a/events.html
+++ b/events.html
@@ -8,8 +8,10 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
+  
+
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="images/INTENT.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
