--- a/index.html
+++ b/index.html
@@ -7,9 +7,78 @@
   <title>HOME</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
+  <!-- Required Meta Tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="theme-color" content="#005f73" /> <!-- Adjust KUCSA brand color -->
+  
+  <!-- Primary SEO Meta Tags -->
+  <title>KUCSA – Kitui County Students Association | Leadership & Empowerment</title>
+  <meta name="title" content="KUCSA – Kitui County Students Association | Leadership & Empowerment" />
+  <meta name="description" content="Official KUCSA site. Empowering Kitui County youth through student leadership, mentorship, education initiatives, and county-level engagement." />
+  <meta name="keywords" content="KUCSA, Kitui County Students Association, student leadership Kenya, Kitui mentorship, Kitui youth programs, KUCSA swearing-in, CECM education Kitui, youth empowerment Kenya" />
+  <meta name="author" content="KUCSA Official" />
+  
+  <!-- Canonical & Alternate -->
+  <link rel="canonical" href="https://kucsaassociation.netlify.app/" />
+  <link rel="alternate" hreflang="en-ke" href="https://kucsaassociation.netlify.app/" />
 
+  <!-- Favicon and Icons -->
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph / Facebook Meta -->
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_KE" />
+  <meta property="og:url" content="https://kucsaassociation.netlify.app/" />
+  <meta property="og:title" content="KUCSA – Kitui County Students Association" />
+  <meta property="og:description" content="Empowering Kitui youth through leadership, mentorship and education programs. Join KUCSA today." />
+  <meta property="og:image" content="https://kucsaassociation.netlify.app/images/kucsa-og-banner.jpg" />
+  <meta property="og:site_name" content="KUCSA" />
+
+  <!-- Twitter / X Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Kkucsa" />
+  <meta name="twitter:creator" content="@Kkucsa" />
+  <meta name="twitter:url" content="https://kucsaassociation.netlify.app/" />
+  <meta name="twitter:title" content="KUCSA – Kitui County Students Association" />
+  <meta name="twitter:description" content="Official site of KUCSA: Leading youth leadership and mentorship initiatives across Kitui County." />
+  <meta name="twitter:image" content="https://kucsaassociation.netlify.app/images/kucsa-og-banner.jpg" />
+
+  <!-- TikTok (Best-effort discoverability, indirect) -->
+  <meta name="application-name" content="KUCSA on TikTok - @kucsa0" />
+  <meta name="description" content="Follow KUCSA on TikTok (@kucsa0) for youth highlights, county events, and empowerment videos." />
+
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "KUCSA",
+    "url": "https://kucsaassociation.netlify.app/",
+    "logo": "https://kucsaassociation.netlify.app/images/kucsa-logo.png",
+    "description": "Kitui County Students Association – Promoting student leadership, mentorship, and youth empowerment across Kenya.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Kitui County",
+      "addressCountry": "KE"
+    },
+    "sameAs": [
+      "https://web.facebook.com/profile.php?id=61554515968248",
+      "https://twitter.com/Kkucsa",
+      "https://www.tiktok.com/@kucsa0"
+    ]
+  }
+  </script>
+
+  <!-- Optional Performance Boosters -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="images/INTENT.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 <!-- Bootstrap CDN -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +194,7 @@ marquee i {
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="images/IMG-20250113-WA0551.jpg" alt="" data-aos="fade-in">
+      <img src="imagess/Group.JPG" alt="" data-aos="fade-in">
 
       <div class="container">
         <h2 data-aos="fade-up" data-aos-delay="100">Welcome to the,<br> Kitui County University and College Students
@@ -146,7 +215,7 @@ marquee i {
         <div class="row gy-4">
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-            <img src="images/1738224125474.jpg" class="img-fluid" alt="">
+            <img src="imagess/group6.JPG" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
