--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ marquee i {
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="imagess/Group.JPG" alt="" data-aos="fade-in">
+      <img src="imagess/Group2.JPG" alt="" data-aos="fade-in">
 
       <div class="container">
         <h2 data-aos="fade-up" data-aos-delay="100">Welcome to the,<br> Kitui County University and College Students
