--- a/trainers.html
+++ b/trainers.html
@@ -411,47 +411,16 @@ href="https://stackpath.bootstrapcdn.com/bootswatch/5.3.0/flatly/bootstrap.min.c
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Brian Muli</h4>
+              <h4>Lydia Mwaniki</h4>
               <span>Ward Rep Mutha Ward</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
 
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
-            <div class="member-img">
-              <img src="imagess/krural.JPG" class="img-fluid" alt="">
-              <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-            <div class="member-info text-center">
-              <h4>Brian Muli</h4>
-              <span>Ward Rep Kauwi Ward</span>
-              <p></p>
-            </div>
-          </div><!-- End Team Member -->
+         
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
-            <div class="member-img">
-              <img src="imagess/krural.JPG" class="img-fluid" alt="">
-              <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-            <div class="member-info text-center">
-              <h4>Brian Muli</h4>
-              <span>Ward Rep Kauwi Ward</span>
-              <p></p>
-            </div>
-          </div><!-- End Team Member -->
-
+        
 
 
         </div>
